<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_action_name1"
            android:title="@string/new_menu"/>
        <item
            android:id="@+id/nav_new1"
            android:icon="@drawable/ic_action_name1"
            android:title="@string/new_menu1"/>
        <item
            android:id="@+id/nav_collapsing_bar"
            android:icon="@drawable/ic_action_name1"
            android:title="@string/new_collapsing_bar"/>

        <item
            android:id="@+id/nav_recycler_view"
            android:icon="@drawable/ocean1"
            android:title="@string/new_recycler_name"/>

        <item
            android:id="@+id/nav_tab_view"
            android:icon="@drawable/ocean2"
            android:title="@string/new_tabs_name"/>

        <item
            android:id="@+id/nav_bottom_view"
            android:icon="@drawable/ocean2"
            android:title="@string/new_bottom_view"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
