<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.alta.androidmaterialdesign_v29.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.alta.androidmaterialdesign_v29.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.alta.androidmaterialdesign_v29.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ru.alta.androidmaterialdesign_v29.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_new"
        android:name="ru.alta.androidmaterialdesign_v29.ui.fragment.NewMenuFragment"
        android:label="@string/new_menu"
        tools:layout="@layout/fragment_new_menu" />

    <fragment
        android:id="@+id/nav_new1"
        android:name="ru.alta.androidmaterialdesign_v29.ui.progressbar.Fragment_progress_bar"
        android:label="@string/new_menu1"
        tools:layout="@layout/fragment_progress_bar_fragment" />

    <fragment
        android:id="@+id/nav_collapsing_bar"
        android:name="ru.alta.androidmaterialdesign_v29.ui.collapsingtoolbar.CollapsingToolbar"
        android:label="@string/new_menu1"
        tools:layout="@layout/collapsing_toolbar_fragment" />

    <fragment
        android:id="@+id/nav_recycler_view"
        android:name="ru.alta.androidmaterialdesign_v29.ui.recyclerView.ItemFragment"
        android:label="@string/new_menu1"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/nav_tab_view"
        android:name="ru.alta.androidmaterialdesign_v29.ui.tab.FragmentTab"
        android:label="@string/new_menu_tabs"
        tools:layout="@layout/fragment_tab" />

    <fragment
        android:id="@+id/nav_bottom_view"
        android:name="ru.alta.androidmaterialdesign_v29.ui.bottomNavigationView.FragmentBottomNavigationView"
        android:label="@string/new_bottom_view_menu"
        tools:layout="@layout/fragment_bottom_navigation_view" />





    <fragment
        android:id="@+id/nav_share"
        android:name="ru.alta.androidmaterialdesign_v29.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ru.alta.androidmaterialdesign_v29.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>